--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,9 @@
 <!doctype html>
 <html>
+    <head>
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel='stylesheet' href='main.css'>
+    </head>
     <body>
         <div id="app">Initial loads</div>
         <script src="js/main.min.js"></script>
